# conware

./: .envrc  .gitignore  .gitmodules  README.md  build_all.sh  build_and_test.sh  install_avatar.sh  install_dependencies.sh  install_pretender.sh  instrument_project.sh  networkX_visualize.py  peripheral_model2.py  peripheral_state2.py  pretender_model_networkx.py  rebuild_runtime.sh  requirements.txt  uninstrument_arduino.sh  upload_bin.sh
conware/: log_data.py
conware/configs/: due.yaml  microbit.yaml  nucleo_l1.yaml
conware/conware/: __init__.py  bin_parser.py  cluster_peripherals.py  common.py  hardware.py  hooks.py  interrupts.py  model.py  peripheral_model.py  peripheral_state.py  peripherals.py  pretender_model.py  pretender_model_networkx.py  utils.py
experiments/: basic_block_compare.py  blink_knock.sh  conware-execution-stats-aggregate.py  conware-get-mmio-dist-aggregate.py  conware-mmio-counter.py  conware-mmio-heatmap.py  conware-model-stats-aggregate.py  conware-model-stats.py  get_basic_blocks.py  graph_lock.sh  knock_and_ir.sh  lock.sh  log_diff.py  log_diff.sh  run_all.sh  uart_blink.sh  uart_hack.py
llvm_build_infra/: README.md  build_pass.sh  capture_arduino_build.sh  instrument_arduino_project.py
llvm_build_infra/llvm_transformation_passes/MMIOLogger/: CMakeLists.txt
llvm_build_infra/llvm_transformation_passes/MMIOLogger/include/: InstrumentationHelper.h  MemAccessFetcher.h
llvm_build_infra/llvm_transformation_passes/MMIOLogger/src/: InstrumentationHelper.cpp  MMIOLoggerPass.cpp  MemAccessFetcher.cpp
projects_custom/blink/: blink.ino  (+2 more)
(+73 files in other folders)
